@@ -25,6 +25,8 @@ version 1.7.10, in progress
 - New function: urcpval, gives user access to James
   MacKinnon's p-values for unit root and cointegration test
   statistics (tau)
+- Improve error-reporting in relation to GUI genr dialog
+- Make parsing of input from GUI ARMA dialog more robust
 - Add importer for SPSS .sav files
 
 9/28/2008 version 1.7.9
